adding client scope to realm

--- a/README.adoc
+++ b/README.adoc
@@ -1,11 +1,10 @@
 = Trusted Application Pipeline Installation
 
-
-
-== Demo Last Tested with
+== Requirements
 
 - OCP 4.16
 - oc client >= 4.16
+- Minio client(https://min.io/docs/minio/linux/reference/minio-mc.html[mc]) in your local $PATH 
 
 
 == TAP Installation
@@ -25,8 +24,21 @@
 ansible-playbook -e token=${token} -e server=${server} playbook.yml
 ----
 
+=== Deploy Trusted Profile Analyzer
+
+The ansible automation will get you to the point you can use Trusted Profile Analyzer helm chart for deploy. It will generate a values file in your /tmp directory.
+To install the helm: 
+
+---
+helm repo add openshift-helm-charts https://charts.openshift.io/
+helm repo update
+helm install redhat-trusted-profile-analyzer openshift-helm-charts/redhat-trusted-profile-analyzer -n trusted-profile-analyzer --values /tmp/values-rhtpa.yaml --debug
+---
+
 
 === Cosign configuration
+
+Before testing cosig, first, create a new user in Keycloak.
 
         export TUF_URL=$(oc get tuf -o jsonpath='{.items[0].status.url}' -n trusted-artifact-signer)
         export OIDC_ISSUER_URL=https://$(oc get route keycloak-ingress-xsv9t -n keycloak-system | tail -n 1 | awk '{print $2}')/realms/trusted-artifact-signer
