--- a/README.adoc
+++ b/README.adoc
@@ -29,28 +29,33 @@ ansible-playbook -e token=${token} -e server=${server} playbook.yml
 The ansible automation will get you to the point you can use Trusted Profile Analyzer helm chart for deploy. It will generate a values file in your /tmp directory.
 To install the helm: 
 
----
+----
 helm repo add openshift-helm-charts https://charts.openshift.io/
+
 helm repo update
+
 helm install redhat-trusted-profile-analyzer openshift-helm-charts/redhat-trusted-profile-analyzer -n trusted-profile-analyzer --values /tmp/values-rhtpa.yaml --debug
----
+----
 
+== Testing
 
-=== Cosign configuration
+=== Cosign
 
-Before testing cosig, first, create a new user in Keycloak.
+Before testing cosig, first, create a new user in Keycloak. You will need it for authentication.
 
-        export TUF_URL=$(oc get tuf -o jsonpath='{.items[0].status.url}' -n trusted-artifact-signer)
-        export OIDC_ISSUER_URL=https://$(oc get route keycloak-ingress-xsv9t -n keycloak-system | tail -n 1 | awk '{print $2}')/realms/trusted-artifact-signer
-        export COSIGN_FULCIO_URL=$(oc get fulcio -o jsonpath='{.items[0].status.url}' -n trusted-artifact-signer)
-        export COSIGN_REKOR_URL=$(oc get rekor -o jsonpath='{.items[0].status.url}' -n trusted-artifact-signer)
-        export COSIGN_MIRROR=$TUF_URL
-        export COSIGN_ROOT=$TUF_URL/root.json
-        export COSIGN_OIDC_CLIENT_ID="trusted-artifact-signer"
-        export COSIGN_OIDC_ISSUER=$OIDC_ISSUER_URL
-        export COSIGN_CERTIFICATE_OIDC_ISSUER=$OIDC_ISSUER_URL
-        export COSIGN_YES="true"
-        export SIGSTORE_FULCIO_URL=$COSIGN_FULCIO_URL
-        export SIGSTORE_OIDC_ISSUER=$COSIGN_OIDC_ISSUER
-        export SIGSTORE_REKOR_URL=$COSIGN_REKOR_URL
-        export REKOR_REKOR_SERVER=$COSIGN_REKOR_URL
+----
+export TUF_URL=$(oc get tuf -o jsonpath='{.items[0].status.url}' -n trusted-artifact-signer)
+export OIDC_ISSUER_URL=https://$(oc get route keycloak-ingress-xsv9t -n keycloak-system | tail -n 1 | awk '{print $2}')/realms/trusted-artifact-signer
+export COSIGN_FULCIO_URL=$(oc get fulcio -o jsonpath='{.items[0].status.url}' -n trusted-artifact-signer)
+export COSIGN_REKOR_URL=$(oc get rekor -o jsonpath='{.items[0].status.url}' -n trusted-artifact-signer)
+export COSIGN_MIRROR=$TUF_URL
+export COSIGN_ROOT=$TUF_URL/root.json
+export COSIGN_OIDC_CLIENT_ID="trusted-artifact-signer"
+export COSIGN_OIDC_ISSUER=$OIDC_ISSUER_URL
+export COSIGN_CERTIFICATE_OIDC_ISSUER=$OIDC_ISSUER_URL
+export COSIGN_YES="true"
+export SIGSTORE_FULCIO_URL=$COSIGN_FULCIO_URL
+export SIGSTORE_OIDC_ISSUER=$COSIGN_OIDC_ISSUER
+export SIGSTORE_REKOR_URL=$COSIGN_REKOR_URL
+export REKOR_REKOR_SERVER=$COSIGN_REKOR_URL
+----
