--- a/README.adoc
+++ b/README.adoc
@@ -48,3 +48,11 @@ export SIGSTORE_OIDC_ISSUER=$COSIGN_OIDC_ISSUER
 export SIGSTORE_REKOR_URL=$COSIGN_REKOR_URL
 export REKOR_REKOR_SERVER=$COSIGN_REKOR_URL
 ----
+
+=== Loading CVE and Advosories database
+
+You can load data from 2022 into TPA, instead of running the full job. You can do it by executing the following Job. 
+
+----
+oc apply -f job.yml -n trusted-profile-analyzer
+----
